--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon app",
-    "start": "node ."
+    "start": "node app"
   },
   "repository": {
     "type": "git",
