--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "jquery.cookie": "^1.4.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1"
   },
