--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "express-session": "^1.17.2",
     "jquery.cookie": "^1.4.1",
     "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.18.1"
+    "multer": "^1.4.3",
+    "mysql": "^2.18.1",
+    "xlsx": "^0.17.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
