--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.7.5",
     "xlsx": "^0.17.3"
   },
   "devDependencies": {
